# hf2q

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  iter25_audit.json  models
.github/workflows/: ci.yml  release-check.yml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd-validation-report.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
benches/: inference_bench.rs  quantize_bench.rs  shard_read_bench.rs
data/: llama_cpp_pin.txt
data/apex-references/: MUDLER_SHA.txt  manifest.json
docs/: ADR-003-architecture-pivot.md  ADR-004-gguf-compatibility.md  ADR-005-inference-server.md  ADR-006-mlx-native-gpu-backend.md  ADR-007-followup-tq-on-non-dwq-investigation.md  ADR-007-turboquant-kv-cache.md  ADR-008-candle-divorce.md  ADR-009-reference-parity-and-coherence-recovery.md  ADR-010-exact-batched-kernel-parity.md  ADR-011-flash-attn-prefill.md  ADR-011-phase1-llamacpp-delta.md  ADR-011-phase1-port-source-decision.md  ADR-011-phase1-prior-art-map.md  ADR-011-phase1-review-verdict.md  ADR-011-phase1-tests-verification.md  ADR-011-phase2-bf16-conversion-map.md  ADR-011-phase2-parity-gate.md  ADR-011-phase2-port-d512.md  ADR-011-phase2-port-sentinel.md  ADR-011-phase2-port-swa-mask.md  ADR-011-phase2-port-tile-skip.md  ADR-011-phase2-wave2a-sentinel-port-verification.md  ADR-011-phase2-wave2b-registry-i32-fc-verification.md  ADR-011-phase2-wave2c-d512-bug-fix.md  ADR-011-phase2-wave2c-d512-port-verification.md  ADR-011-phase2-wave2d-swa-mask-verification.md  ADR-011-phase2-wave2e-tile-skip-verification.md  ADR-011-phase2-wave2f-bf16-kernels-verification.md  ADR-011-phase2-wave3-bf16-conversion-verification.md  ADR-011-phase2-wave4-1-rank2-broadcast-verification.md  ADR-011-phase2-wave4-wire-up-verification.md  ADR-011-phase3-perf-investigation.md  ADR-011-phase3-wave-p3a-mm-qmatmul-verification.md  ADR-012-qwen35moe-conversion.md  ADR-013-qwen35-inference.md  ADR-014-streaming-convert-pipeline.md  ADR-015-mlx-native-single-cb-decode.md  ADR-016-mlx-vs-coreml-strategic-comparison.md  ADR-016-research-dossier-2026-04-26.md  ADR-017-per-family-status.md  (+75 more)
docs/adr-033-audit/: delete-listed.md  gguf-writer.md  k-quant-codec.md  k-quant.md  layer-mix.md  main-dispatch.md  q-legacy.md  quantize-mod.md  synthesis.md
docs/adr-033-real-model-findings/: 2026-05-18-gemma4-arch-mismatch.md  2026-05-19-p6-deletion-plan.md  2026-05-19-quality-equivalence-gemma4-26b.md  2026-05-19-quality-matrix.md
docs/adr007-pathC/: PATHC_CLOSURE.md
docs/reddit/: reddit-atlas.txt  reddit-heretic.txt  reddit-mtp.txt
docs/research/: ADR-029-iter-175-FULL-STATE-2026-05-15.md  ADR-029-iter-175-step-1-dispatch-distribution-2026-05-15.md  ADR-029-iter-175-step-1aa-peer-ratio-at-HEAD-2026-05-15.md  ADR-029-iter-175-step-1ab-prefill-methodology-2026-05-15.md  ADR-029-iter-175-step-1ac-prefill-apples-to-apples-2026-05-15.md  ADR-029-iter-175-step-1ad-id-kernel-perdispatch-2026-05-15.md  ADR-029-iter-175-step-1ae-peer-vs-hf2q-id-kernel-2026-05-15.md  ADR-029-iter-175-step-1af-shape-correction-2026-05-15.md  ADR-029-iter-175-step-1ah-cpu-encode-localization-2026-05-15.md  (+59 more)
examples/: 01-convert-gemma4-q4km.sh  02-serve-and-curl.sh  03-openai-python-client.py  04-embeddings-bert.sh  05-qwen-vision-image.sh  README.md
input-mlx-f16/: config.json  model-00001-of-00004.safetensors  model-00002-of-00004.safetensors  model.safetensors.index.json  quantization_config.json
scripts/: adr-011-phase2-gate.sh  adr005_mteb_sanity.sh  adr010_iter64_batched_coherence_gate.sh  adr010_iter64_iter68_full_lock.sh  adr017_phase_d.sh  adr019-phase0a1-capture-and-bin.sh  adr019-phase0a1-llamacpp-capture.sh  adr019-phase0a4-perf-counters.sh  adr019-phase2-determinism-5x.sh  adr019-phase2-parity.sh  adr020_ac7_boundary_validate.sh  adr020_ac8_validate.sh  adr020_fetch_wikitext_calibration_jsonl.sh  adr022_p18_byte_equal.sh  adr027-cross-axis-sweep.sh  adr027-full-validation.sh  adr027-long-context-sweep.sh  adr028_coherence_gate.sh  adr028_full_stack_bench.sh  adr028_iter485_h4_bench.sh  adr029_aot_compare_air.sh  adr029_xctrace_per_cb_gpu_time.sh  aggregate-q4_0-mst.py  aggregate_decode.py  aggregate_decode_mst.py  aggregate_hypotheses.json  aggregate_hypotheses_gemma.json  bench-baseline.sh  bench-iter83-chunk-engaged.sh  bench-iter83-default.sh  bench-iter83-parse-results.sh  bench-iter8d-residency.sh  bench-long-context.sh  bench-matrix.sh  bench-needle-haystack.sh  bench-w5b10-flash-attn-prefill.sh  bench-w5b11-post-attn.sh  bench-w5b11-sunset-parity.sh  bench-w5b14-dense-q-fused.sh  bench-w5b15-dense-q-arena-reset.sh  (+72 more)
src/: cli.rs  doctor.rs  gguf_patch.rs  ir.rs  lib.rs  main.rs  preflight.rs  progress.rs  report.rs
tests/: adr_022_phase1_p11_gemma4_tokenizer_parity.rs  auto_pipeline_smoke.rs  bench_prompt_128.txt  cache_clear.rs  calibrate_dispatch.rs  calibration_eval_disjoint.rs  cli_integration.rs  cmd_convert_dispatch.rs  codec_direct_type_code.rs  coherence_matrix.rs  coherence_smoke.rs  convert_integration.rs  convert_qwen35_integration.rs  convert_qwen35_metadata_keys.rs  convert_qwen35_mtp_roundtrip.rs  convert_qwen35_real_activation_capture.rs  convert_qwen35_rms_norm_plus_one.rs  convert_qwen35_two_pass_capture.rs  convert_qwen35_vocab_parity.rs  convert_qwen35moe_integration.rs  convert_v2_integration.rs  convert_vision_tower_adr005_roundtrip.rs  convert_vision_tower_integration.rs  create_fixture.rs  dwq_cache_integration.rs  dwq_emits_q4_k_via_cli.rs  dwq_k_quantizer.rs  imatrix_xvalidation.rs  info_integration.rs  integration_qwen35_dense.rs  integration_qwen35moe.rs  kv_persist_gemma4_roundtrip.rs  kv_persist_harness.rs  kv_persist_stress.rs  kv_persist_tq_packed_roundtrip.rs  kv_persist_writer_kill_minus_9.rs  lcp_default_on_engagement.rs  lcp_partial_prefill_byte_identity.rs  lcp_qwen35_b3_stride_aligned_resume.rs  lcp_qwen35_b4_danger_zone_bypass.rs  (+42 more)
tools/vit_parity_probe/: .gitignore  Cargo.toml
tools/vit_parity_probe/cpp/: CMakeLists.txt  peer_dumper.cpp
(+445 files in other folders)
