[package]
name = "hf2q"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
description = "Pure Rust CLI for converting HuggingFace models to hardware-optimized formats"
license = "Apache-2.0"
repository = "https://github.com/robertelee78/hf2q"

[features]
default = []
# Enable RuVector self-learning
ruvector = ["dep:ruvector-core"]

[dependencies]
safetensors = "0.7"
half = "2.4"

# HuggingFace integration
hf-hub = "0.5"

# Self-learning intelligence — optional
ruvector-core = { version = "2.1", optional = true }

# CLI framework
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Performance
rayon = "1.10"
memmap2 = "0.9"

# UX
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# ADR-008: mlx-native is the sole inference/compute backend.
# Published at https://crates.io/crates/mlx-native. For local mlx-native
# development, override via a (gitignored) .cargo/config.toml:
#   [patch.crates-io]
#   mlx-native = { path = "/opt/mlx-native" }
mlx-native = "0.4.7"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# Transitive via tokenizers but we consume it directly to construct
# the WordPiece builder's AHashMap vocab (tokenizers 0.22 requires it).
ahash = "0.8"

# Async runtime + HTTP server (for `serve` subcommand)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"

# System info
sysinfo = "0.32"

# File locking (unix)
libc = "0.2"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Phase 2c vision preprocessing (ADR-005 iter 22+). Keep features minimal
# — PNG + JPEG cover OpenAI's `image_url` data-URI cases and the fixture
# shapes we use in tests.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

# iter-20+ audit binaries (ADR-007): pattern matching for tok/s parsing
regex = "1"

# Jinja2 chat template rendering (pure Rust; matches llama.cpp's vendored
# common/jinja/ parser and mlx-lm's Python jinja2 behavior — see ADR-005 line 681)
minijinja = "2"

# tempfile is used at runtime by the convert pipeline (ADR-012 P9b two-pass
# intermediate GGUF for qwen35 / qwen35moe activation capture) AND by tests.
# Promoted from dev-dep to runtime dep when P9b.2 / P9b.3b shipped.
tempfile = "3"

# ADR-007 Gate H (W21 iter-108b): parity_quality fixture writer hashes the
# GGUF + records git_head; sha2 + hex were previously dev-deps for ADR-012 P9
# corpus drift assertions, promoted to runtime deps here.
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
regex = "1"
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "iter23_audit"
path = "src/bin/iter23_audit.rs"

[[bin]]
name = "iter24_audit"
path = "src/bin/iter24_audit.rs"

[[bin]]
name = "iter25_audit"
path = "src/bin/iter25_audit.rs"

[[bench]]
name = "quantize_bench"
harness = false

[[bench]]
name = "shard_read_bench"
harness = false

# ADR-008: vendored candle patches removed (candle no longer used for inference).

